Added mongoclient to docker-compose

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -8,7 +8,12 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-
+  catalogdb.client:
+    container_name: catalogdb.client
+    depends_on:
+      - catalogdb
+    ports:
+      - 3000:3000
   catalog.api:
     container_name: catalog.api
     environment:
