--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.4'
 services:
   catalogdb:
     image: mongo
+  catalogdb.client:
+    image: mongoclient/mongoclient
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
